<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical" android:layout_width="fill_parent"
	android:layout_height="fill_parent" android:id="@+id/main"
	android:background="@drawable/bg3">
	<ImageView
	    android:id="@+id/imageView1"
	    android:layout_width="296dp"
	    android:layout_height="wrap_content"
	    android:src="@mipmap/current"
	   />
	<Button android:id="@+id/btnSetting" android:text="@string/setting"
		android:layout_width="fill_parent" android:layout_height="wrap_content"
		android:textSize="20dip"/>
	<Button android:id="@+id/btnSearchDevice" android:text="@string/searchdevice"
		android:layout_width="fill_parent" android:layout_height="wrap_content"
		android:textSize="20dip"/>
	<Button android:id="@+id/btnMonitor" android:text="@string/monitor"
		android:layout_width="fill_parent" android:layout_height="wrap_content"
		android:textSize="20dip"/>
	<Button android:id="@+id/btnAbout" android:text="@string/about"
		android:layout_width="fill_parent" android:layout_height="wrap_content"
		android:textSize="20dip"/>
	<Button android:id="@+id/btnExit" android:text="@string/exit"
		android:layout_width="fill_parent" android:layout_height="wrap_content"
		android:textSize="20dip"/>

	

</LinearLayout>
