<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#eeeeee">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#d9d7d7"
        android:padding="@dimen/activity_vertical_margin">
        
        <Button
	        android:id="@+id/btn_enable2"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_centerInParent="true"     
	        android:visibility="gone"
	        android:text="@string/text_enable_bluetooth" />
        
	    <Button
	        android:id="@+id/btn_connect2"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignParentRight="true"
	        android:layout_alignParentTop="true"     
	        android:text="@string/text_connect" />
	    
	    <Spinner
	        android:id="@+id/sp_device2"
	        android:layout_toLeftOf="@+id/btn_connect2"
	        android:layout_alignBottom="@+id/btn_connect2"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignParentLeft="true"
	        android:layout_alignParentTop="true"/>

	</RelativeLayout>
	
    <View
        android:id="@+id/separator2"
        android:layout_width="match_parent"
        android:layout_height="5dp"
        android:background="#ff8800"/>
    
    <Button
        android:id="@+id/btn_print_demo2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="@dimen/activity_vertical_margin"          
        android:layout_marginLeft="@dimen/activity_vertical_margin"
        android:layout_marginTop="@dimen/activity_vertical_margin" 
        android:enabled="false"
        android:text="@string/text_print_demo" />
    
    <Button
        android:id="@+id/btn_print_receipt2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="@dimen/activity_vertical_margin"   
        android:layout_marginLeft="@dimen/activity_vertical_margin" 
        android:enabled="false"
        android:text="@string/text_print_receipt" />
     
    <TextView 
        android:id="@+id/tv21"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="tv" 
        android:visibility="visible"/>"
    
</LinearLayout>